fixed overflow on bandsImages

--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -430,8 +430,8 @@ h2 {
         display: block;
     }
     .bandsImages {
-        width: 100%;
-        height: 400px;
+        height: 40vh;
+        width: auto;
         background-repeat: no-repeat;
         background-position: center;
         background-size: contain;
